EVEREST-84: support for k8s cluster removal
