# api/kubernetes.go
@@ -1,14 +1,18 @@
 package api
 
 import (
+	"context"
 	"log"
 	"net/http"
 
 	"github.com/AlekSi/pointer"
 	"github.com/labstack/echo/v4"
+	"github.com/pkg/errors"
+	"github.com/sirupsen/logrus"
 	"k8s.io/client-go/tools/clientcmd"
 
 	"github.com/percona/percona-everest-backend/model"
+	"github.com/percona/percona-everest-backend/pkg/kubernetes"
 )
 
 // ListKubernetesClusters returns list of k8s clusters.
@@ -67,7 +71,7 @@ func (e *EverestServer) RegisterKubernetesCluster(ctx echo.Context) error {
 	return ctx.JSON(http.StatusOK, result)
 }
 
-// GetKubernetesCluster Get the specified kubernetes cluster.
+// GetKubernetesCluster Get the specified Kubernetes cluster.
 func (e *EverestServer) GetKubernetesCluster(ctx echo.Context, kubernetesID string) error {
 	k, err := e.storage.GetKubernetesCluster(ctx.Request().Context(), kubernetesID)
 	if err != nil {
@@ -79,4 +83,66 @@ func (e *EverestServer) GetKubernetesCluster(ctx echo.Context, kubernetesID stri
 		Name: k.Name,
 	}
 	return ctx.JSON(http.StatusOK, result)
+}
+
+// UnregisterKubernetesCluster removes a Kubernetes cluster from Everest.
+func (e *EverestServer) UnregisterKubernetesCluster(ctx echo.Context, kubernetesID string) error {
+	var params DeleteKubernetesClusterParams
+	if err := ctx.Bind(&params); err != nil {
+		log.Println(err)
+		return ctx.JSON(http.StatusBadRequest, Error{Message: pointer.ToString(err.Error())})
+	}
+
+	k, err := e.storage.GetKubernetesCluster(ctx.Request().Context(), kubernetesID)
+	if err != nil {
+		log.Println(err)
+		return ctx.JSON(http.StatusBadRequest, Error{Message: pointer.ToString(err.Error())})
+	}
+
+	client, err := kubernetes.NewFromSecretsStorage(
+		ctx.Request().Context(), e.secretsStorage, k.ID,
+		k.Namespace, logrus.NewEntry(logrus.StandardLogger()),
+	)
+	if err != nil {
+		log.Println(err)
+		return ctx.JSON(http.StatusInternalServerError, Error{Message: pointer.ToString(err.Error())})
+	}
+
+	if params.Force == nil || !*params.Force {
+		clusters, err := client.ListDatabaseClusters(ctx.Request().Context())
+		if err != nil {
+			log.Println(err)
+			return ctx.JSON(http.StatusInternalServerError, Error{Message: pointer.ToString(err.Error())})
+		}
+
+		if len(clusters.Items) != 0 {
+			return ctx.JSON(http.StatusBadRequest, Error{
+				Message: pointer.ToString("Remove all database clusters before unregistering a Kubernetes cluster"),
+			})
+		}
+	}
+
+	if err := e.removeK8sCluster(ctx.Request().Context(), client, kubernetesID); err != nil {
+		log.Println(err)
+		return ctx.JSON(http.StatusInternalServerError, Error{Message: pointer.ToString(err.Error())})
+	}
+
+	return ctx.NoContent(http.StatusOK)
+}
+
+func (e *EverestServer) removeK8sCluster(ctx context.Context, client *kubernetes.Kubernetes, kubernetesID string) error {
+	err := client.DeleteAllMonitoringResources(ctx)
+	if err != nil {
+		return errors.Wrap(err, "could not delete monitoring resources from k8s cluster")
+	}
+
+	if _, err := e.secretsStorage.DeleteSecret(ctx, kubernetesID); err != nil {
+		return errors.Wrap(err, "could not delete kubeconfig from secrets storage")
+	}
+
+	if err := e.storage.DeleteKubernetesCluster(ctx, kubernetesID); err != nil {
+		return errors.Wrap(err, "could not delete Kubernetes cluster from db")
+	}
+
+	return nil
 }
